fix: errores: se agrego la carpeta static y se movio el archivo favicon.ico dentro de la mismas, se corrijieron errores de tipeo multiples en app.py, posts.html, cada correccion esta comentada dentro del mismo codigo html

--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <h1>Crear un nuevo Post</h1>
+
+<!-- Mostrar el mensaje de error si no se llena el título -->
+{% if error_message %}
+    <div class="alert alert-danger">
+        {{ error_message }}
+    </div>
+{% endif %}
+
 <form method="post">
     <div class="form-group">
         <label for="title">Title</label>
