--- a/templates/post/posts.html
+++ b/templates/post/posts.html
@@ -24,7 +24,7 @@
                     <td>{{ post['content'] }}</td>
                     <td>{{ post['created'] }}</td>
                     <td>
-                        <a href="{{ url_for('edit_one_post', post_id=post['id']) }}" class="btn btn-warning btn-sm">Editar</a>
+                        <a href="{{ url_for('edit_one_post', id=post['id']) }}" class="btn btn-warning btn-sm">Editar</a> <!-- Se modifico "post_id=post['id']" por "id=post['id']"-->
                         <form action="{{ url_for('delete_one_post', post_id=post['id']) }}" method="post" style="display:inline;">
                             <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('¿Estás seguro de que deseas eliminar este post?');">Eliminar</button>
                         </form>
